# ergonomics

./: .gitignore  LICENSE  README.md
Data/: grfs.mot  markers.trc  static.trc
Data/RoyalSociety/: subject_data.txt
Data/SquatToStand/: grfs.mot  markers.trc
Examples/SitToStand - Copy/: bounds.txt  config.txt  model.osim
Models/Adjusted/: gait2392.osim  gait2392musc.osim  gait2392musc_contact.osim  gait2392musc_contact2.osim
Models/Generic/: H3_gait2392.osim  H3_gait2392_elspeth.osim  H3_gait2392_exoMarkers.osim  H3_gait2392_scaled_markers.xml  fullbodyH3.osim  fullbodyH3_controlled.osim  fullbody_controlled.osim  gait1018.osim  gait1018_moco.osim  gait1018musc.osim  gait2392.osim  gait2392_markers.osim  gait2392_modified.osim  gait2392musc.osim  gait2392musc_contact.osim  lumbar.osim  lumbarmusc.osim
Models/Scaled/: gait1018.osim  gait1018_moco.osim  gait1018musc.osim  gait2392.osim  gait2392musc.osim  lumbar.osim  lumbarmusc.osim  model_scaled_ForceReporter_forces.sto
OpenSim/IK/: ik.mot
Scripts/: CreateAssistancePlots.m  CreateMetricPlots.m  bounds.txt  config.txt  config_assisted.txt  config_weak.txt  guess.sto  simulate.py
Scripts/10_WeightsComparison/: calculateREBA.m
Scripts/11_RecoverKnownWeights/: 2D_gait_jointspace.osim  TrackingSolution.sto  TrackingSolutionBlock.sto  main.m  objective.m
Scripts/12_2DVariability/: 0.1.sto  0.1b.sto  0.1c.sto  0001.sto  1.sto  1b.sto  1c.sto  2.sto  forces.sto  guess_2.sto  l0k1.sto  l1k0.sto  l1k1.sto  main_old.m  moco_traj.sto  new.sto  objectiveCluster.m  ref_forces.sto  ref_traj.sto  reference.sto  reference_randomguess.sto  t0.sto  t1.sto  test.sto  test.txt  weights.txt
Scripts/12_Cluster/: cluster.sh  clusterObjective.m  ipopt.opt  main.m  matlab.sh  objective_old.m  reference.sh  reference.sto
Scripts/13_IPOPT/: main.m
Scripts/14_BayesoptMuscleNew/: 0-475.sto  0-476.sto  0-477.sto  1.sto  1_test.sto  TrackingSolutionMuscles.sto  bayesopt400.fig  bayesopt_results.mat  bayesopt_results_200.mat  bayesopt_results_4D_200.mat  main.m  objective.fig  objective.m  reference.sto  surface.fig  surrogate1000.fig  surrogate1000.mat  surrogate200.mat  surrogate6D1000.mat  surrogate6D2000.mat  test.txt  worst.sto
Scripts/14_RecoverKnownWeightsWorking/: 2D_gait_jointspace_welded.osim  main.m  objective.m
Scripts/15_PythonImplementation/: TrackingSolutionJoints.sto  bounds.txt  cluster.sh  cluster_config.txt  python_ioc.py
Scripts/16_PythonImplementationLocal/: python_ioc.py  reference.sto  results.json  (+1 more)
Setup/: configure.m
Source/: CMC_controls.sto  CMC_controls.xml  Reduced_CMC_controls.xml  TestForward.m  TestForwardSO.m  addH3JointControls.asv  addH3JointControls.m  amp_80_start_40_angle_75.mot  analysis_states_StatesReporter_states.sto  assistance_forces.mot  assistance_grfs.mot  assistance_loads.asv  assistance_loads.xml  assistance_settings.xml  gait1018_moco.osim  gait1018_moco_adjustedcontact.osim  gait1018_moco_loweredfloor.osim  gait1018_moco_raisedfloor.osim  generateAssistiveLoads.m  generateMuscleConstraints.asv  generateMuscleConstraints.m  initialiseFromStates.m  mocoTrack.m  moco_squat_grf_control0-1_state10s.sto  moco_squat_grfs_firstdecent.sto  moco_squat_grfs_fulltrack.sto  moco_squat_grfs_grfs.sto  moco_squat_grfs_strange_jump.sto  moco_squat_solution_controls0-1_state10.sto  moco_squat_solution_firstdecent.sto  moco_squat_solution_fulltrack.sto  moco_squat_solution_grfs.sto  moco_squat_solution_strange_jump.sto  parameterisedAssistance.asv  parameterisedAssistance.m  removeReserves.m  residuals_feet_assistance180deg.mot  residuals_feet_assistance180deg_medium.mot  residuals_feet_assistance180deg_strong.mot  residuals_feet_assistance30deg.mot  (+16 more)
Source/cpp/: CMakeLists.txt  MocoMarginOfStabilityGoal.cpp  MocoProjectedMarginOfStabilityGoal.cpp  MocoStabilityGoal.h  MocoWeightedMarginOfStabilityGoal.cpp  MocoWeightedMarginOfStabilityGoal.h  RegisterTypes_osimMocoMarginOfStabilityGoal.cpp  RegisterTypes_osimMocoProjectedMarginOfStabilityGoal.cpp  main  main.cpp  main_commandline.cpp  main_h3.cpp  main_save.cpp  mos_only_old.sto  optimise4D.cpp  optimise4D_cluster.cpp  optimise7D.cpp  osimMocoMarginOfStabilityGoalDLL.h  osimMocoProjectedMarginOfStabilityGoalDLL.h  osimMocoWeightedMarginOfStabilityGoalDLL.h  projected_mos.sto  pure_mos.sto  w_effort=0.000000_w_mos=0.000000_w_pmos=0.000000_w_wmos=0.000000_w_aload=0.000000_w_kload=0.000000_w_hload_=0.100000_w_ploat_=0.000000.sto  w_effort=0.100000_w_mos=0.000000_w_pmos=0.000000_w_wmos=0.000000_w_aload=0.000000_w_kload=0.000000_w_hload_=0.000000_w_ploat_=0.000000.sto
Source/cpp/Goals/: MocoMultiJointReactionGoal.cpp  MocoProjectedStabilityGoal.cpp  MocoProjectedStabilityGoal.h  MocoStabilityGoal.cpp
Source/cpp/apps/: CMakeLists.txt  boundsParseAndPrint.cpp  compareKinematicRMS.cpp  configParseAndPrint.cpp  optimise4D.cpp  optimise4D_cluster.cpp  optimise6D.cpp  optimise7D.cpp  solveAndCompare.cpp  solveAndPrint.cpp  solveAndPrintTracked.cpp
Source/cpp/cpp_code/: CMakeLists.txt  MocoMarginOfStabilityGoal.h  MocoProjectedMarginOfStabilityGoal.h  RegisterTypes_osimMocoMarginOfStabilityGoal.h  RegisterTypes_osimMocoProjectedMarginOfStabilityGoal.h  RegisterTypes_osimMocoWeightedMarginOfStabilityGoal.cpp  RegisterTypes_osimMocoWeightedMarginOfStabilityGoal.h
Source/cpp/include/: CombinedSitToStand.hpp  Configuration.hpp  LowerLevel.hpp  MocoImporter.hpp  MocoMultiJointReactionGoal.hpp  MocoMultiStabilityGoal.hpp  MocoProjectedStabilityGoal.hpp  MocoStabilityGoal.hpp  MocoWeightedStabilityGoal.hpp  ProblemBounds.hpp  SitToStand.hpp  SitToStandTracked.hpp  Tasks.hpp
Source/cpp/old/: MocoMarginOfStabilityGoal.cpp  MocoMarginOfStabilityGoal.h  MocoProjectedMarginOfStabilityGoal.h  MocoWeightedMarginOfStabilityGoal.cpp  MocoWeightedMarginOfStabilityGoal.h
Source/cpp/src/: CMakeLists.txt  CombinedSitToStand.cpp  Configuration.cpp  LowerLevel.cpp  MocoMultiJointReactionGoal.cpp  MocoMultiStabilityGoal.cpp  MocoProjectedStabilityGoal.cpp  MocoStabilityGoal.cpp  MocoWeightedStabilityGoal.cpp  ProblemBounds.cpp  SitToStand.cpp  SitToStandTracked.cpp
(+1938 files in other folders)
